// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddOrEditQuestion renders add form correctly 1`] = `
<div
  class="hZfSeG"
  name="modal-fade"
>
  <div
    class="kRBSif"
  >
    <header>
      <button
        class="beFTTq"
      >
        <v-icon>
          close
        </v-icon>
      </button>
       
      <h1
        class="bhoRXc"
      >
        Add new question
      </h1>
    </header>
     
    <section>
       
      <div
        class="jKkdhY"
      >
        <form
          novalidate="novalidate"
        >
          <div
            class="jtUfTw jwWyFP"
          >
            <p>
              Type
            </p>
             
            <v-radio-group
              mandatory="true"
              row=""
            >
              <v-radio
                label="Static"
                value="static"
              />
               
              <v-radio
                label="Dynamic"
                value="dynamic"
              />
            </v-radio-group>
          </div>
           
          <!---->
           
          <div
            class="jtUfTw"
          >
            <v-text-field
              id="question-text-input"
              label="Question*"
              name="questionText"
              placeholder="Type your question"
              required=""
            />
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="jtUfTw"
          >
            <v-textarea
              id="question-answer-input"
              label="Answer*"
              name="answer"
              no-resize="false"
              placeholder="Type your answer"
              required=""
            />
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="jtUfTw"
          >
            <v-text-field
              id="question-value-input"
              label="Points*"
              name="questionValue"
              placeholder="Enter question value (points)"
              required=""
            />
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="fvVliX"
          >
            <v-btn
              color="blue darken-1"
              flat=""
              id="question-cancel-button"
              type="reset"
            >
              
        Cancel
      
            </v-btn>
             
            <v-btn
              color="blue darken-1"
              flat=""
              id="question-save-button"
              type="submit"
            >
              
        Save
      
            </v-btn>
          </div>
        </form>
      </div>
    </section>
     
    <footer />
  </div>
</div>
`;

exports[`AddOrEditQuestion renders edit form correctly 1`] = `
<div
  class="hZfSeG"
  name="modal-fade"
>
  <div
    class="kRBSif"
  >
    <header>
      <button
        class="beFTTq"
      >
        <v-icon>
          close
        </v-icon>
      </button>
       
      <h1
        class="bhoRXc"
      >
        Edit question
      </h1>
    </header>
     
    <section>
       
      <div
        class="jKkdhY"
      >
        <form
          novalidate="novalidate"
        >
          <!---->
           
          <p
            class="gYaVnZ"
          >
            Type: static
          </p>
           
          <div
            class="jtUfTw"
          >
            <!---->
             
            <p
              class="gYaVnZ"
            >
              Question: 
            </p>
             
            <!---->
          </div>
           
          <div
            class="jtUfTw"
          >
            <v-textarea
              id="question-answer-input"
              label="Answer*"
              name="answer"
              no-resize="false"
              placeholder="Type your answer"
              required=""
            />
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="jtUfTw"
          >
            <v-text-field
              id="question-value-input"
              label="Points*"
              name="questionValue"
              placeholder="Enter question value (points)"
              required=""
            />
             
            <!---->
             
            <!---->
          </div>
           
          <div
            class="fvVliX"
          >
            <v-btn
              color="blue darken-1"
              flat=""
              id="question-cancel-button"
              type="reset"
            >
              
        Cancel
      
            </v-btn>
             
            <v-btn
              color="blue darken-1"
              flat=""
              id="question-save-button"
              type="submit"
            >
              
        Update
      
            </v-btn>
          </div>
        </form>
      </div>
    </section>
     
    <footer />
  </div>
</div>
`;
